--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="application-name" content="lukezsmith">
     <meta name="msapplication-TileColor" content="#4264ae">
     <meta name="theme-color" content="#ffffff">
-    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/static/media/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
