--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%/static/media/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/media/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
     <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="apple-mobile-web-app-title" content="lukezsmith">
     <meta name="application-name" content="lukezsmith">
     <meta name="msapplication-TileColor" content="#4264ae">
     <meta name="theme-color" content="#ffffff">
-    <link rel="shortcut icon" type="image/x-icon" href="/static/media/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <!--
