--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" type="image/x-icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="https://lh6.googleusercontent.com/V-mHEg5Wu5xEMqbcFDuHo_MKXDHbXmviHuZxVtjEy__5VygzE6uXp3JGubKVKS7oaFd1g4m-YlBqUw=w2880-h1534">
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
