db test and favicon link change to aws

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" type="image/x-icon" href="https://lh3.google.com/u/0/d/1xWMvXCxOoFsxMbAM4zzTLsRaS8CKjBa9">
+    <link rel="shortcut icon" type="image/x-icon" href="https://s3.eu-west-2.amazonaws.com/lukezsmithcom/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
