--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, maximum-scale=1"
+		/>
 		<meta name="theme-color" content="#000000" />
 		<meta name="apple-mobile-web-app-title" content="lukezsmith" />
 		<meta name="application-name" content="lukezsmith" />
